# PolarisGate

./: .bandit.yaml  .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.ai-ml-test  Dockerfile.e2e  Dockerfile.fips  Dockerfile.frontend-test  Dockerfile.k6  Dockerfile.migrate  Dockerfile.test  Dockerfile.train  LICENSE  MODEL_CARD.md  Makefile  README.md  SECURITY.md  competitive-analysis.md  deepseek-model-report.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.bak  frontend-audit-report.md  index.html  install.sh  mypy.ini  pyproject.toml  requirements.train.txt  task_progress.md
.github/: PULL_REQUEST_TEMPLATE.md
brochure/: index.html
demo/: demo_captions.webm  demo_silent.py  demo_voice.py
docs/: index.html  quickstart.md  troubleshooting.md  user-stories.md
frontend/: Dockerfile  default.conf
nginx/: Dockerfile  polarisgate.conf
policies/: confidence_thresholds.yaml  pii_context.yaml  policies.yaml
prometheus/: alerts.yml  prometheus.yml
reports/: accuracy_results.json  ai_ml_report.xml  concurrent_load_results.json
scripts/: acquire_and_benchmark.py  acquire_data.py  add_indexes.sql  alert_accuracy_regression.py  apply_indexes.py  autoscaler.sh  backup.sh  build_airgap.sh  build_labeled_datasets.py  check_accuracy_thresholds.py  clean_data.py  curate_and_balance.py  deploy.sh  enable_encryption.sql  evaluate_accuracy.py  evaluate_calibration.py  gate_canadian_pii.py  gate_cascade.py  gate_cascade_api.py  gate_e2e.sh  gate_toxicity.py  gate_toxicity_api.py  generate_accuracy_dashboard.py  hallucination_pairs.json  init_db.py  init_db.sql  label_with_llama.py  pipeline_train.py  pipeline_train.sh  preflight-check.js  pull_model.sh  run_accuracy_benchmark.py  run_cascade_accuracy_benchmark.py  (+10 more)
(+274 files in other folders)
