[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "polarisgate"
version = "1.0.0"
description = "PolarisGate AI Governance Platform — Enterprise-grade AI safety, compliance, and monitoring"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "PolarisGate Team"},
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # bandit security
    "B",   # bugbear
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # allow assert in tests
    "S311",  # allow standard pseudo-random generators
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311", "ARG001", "ARG002"]
"scripts/*" = ["S101", "S311"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = false
warn_redundant_casts = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "asyncio: mark test as async",
]

[tool.coverage.run]
source = ["services"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 60

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
